# isic2024-tbp

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  REPRODUCE.md  environment.yml  pyproject.toml  requirements-lock.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
configs/: default.yaml  gbdt.yaml
configs/vision/: convnextv2_nano.yaml  convnextv2_nano_r224.yaml  convnextv2_tiny.yaml  effvit_b0.yaml  eva02_small.yaml  mnv4_small.yaml  mnv5_300m.yaml  swinv2_tiny.yaml  vit_tiny.yaml
docs/: CITATIONS.md  DECISIONS.md  ablations.html  credits.html  data.html  index.html  methods.html  references.html  reproducibility.html  results.html  robots.txt  search.json  sitemap.xml  slides.html  submission.html  team.html
docs/deck/: deck.js  index.html  theme.css
docs/figures/: site.css
docs/tables/: table1_tabular.html  table2_experiments.html  tables.css
experiments/: kaggle_inference.py  kaggle_stack_inference.py  run_stack.py
reports/: _style.py  frontier.py
reports/eda/: EDA.md  (+2 more)
site/: _fonts.html  _quarto.yml  ablations.qmd  credits.qmd  custom-dark.scss  custom.scss  data.qmd  index.qmd  methods.qmd  references.bib  references.qmd  report.qmd  reproducibility.qmd  results.qmd  slides.qmd  slides.scss  submission.qmd  team.qmd
src/: config.py  cv.py  data.py  efficiency.py  features.py  gbdt.py  metric_official.py  stack.py  submit.py
tests/: test_cv.py  test_features.py
(+21 files in other folders)
