[project]
name = "isic2024-tbp"
version = "0.1.0"
description = "Efficiency-frontier skin-lesion classification on ISIC-2024 SLICE-3D (single-dataset, no external data)."
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "pyarrow>=16",
    "scikit-learn>=1.5",
    "scipy>=1.13",
    "pyyaml>=6.0",
    "lightgbm>=4.5",
    "catboost>=1.2",
    "timm>=1.0.16",          # required for the MobileNetV5 / Gemma 3n encoder
    "albumentations>=1.4",
    "h5py>=3.11",
    "pillow>=10.4",
    "matplotlib>=3.9",
    "fvcore>=0.1.5",         # FLOP counting (thop is a fallback in efficiency.py)
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6"]

# torch is installed separately against the right CUDA wheel — see README / environment.yml.
# pip install torch torchvision --index-url https://download.pytorch.org/whl/cu128
# (CPU-only: swap the index for https://download.pytorch.org/whl/cpu)

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"src/metric_official.py" = ["F401", "E501"]   # vendored verbatim; do not lint-modify
"src/__init__.py" = ["F401"]
"src/vision/__init__.py" = ["F401"]
"reports/**" = ["E501", "E402", "I001", "E702", "E731", "F401"]
"experiments/**" = ["E501", "E731", "E702"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["."]
